# mle-training

./: .gitignore  Dockerfile  README.md  assignment_3.2.py  entrypoint.sh  env.yml  nonstandard_code.py  nonstandardcode.py  nonstandardcode.py.ipynb  setup.cfg  setup.py
deploy/conda/: linux_cpu_py39.yml
docs/source/: conf.py  index.rst
src/housing_price/: ingest_data.py  logger.py  score.py  train.py
tests/functional_tests/: functional_test.py
