[metadata]
name = housing_price
version = 0.3
author = Anubhav Yadav
author_email = anubhav.yadav@tigeranalytics.com
description = Package made for assignment 4.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tigerAnubhav/mle-training
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
ignore = ["E501"]